--- a/report/references.bib
+++ b/report/references.bib
@@ -28,17 +28,24 @@
   year={2014},
   publisher={Elsevier}
 }
-@misc{moz-tls,
-  title = {Security/Server Side TLS},
-  author = {Mozilla},
+@online{moz-tls,
+  title = {Security/Server Side TLS --- MozillaWiki},
+  author = {Mozilla community},
   year = 2018,
-  url = {https://wiki.mozilla.org/Security/Server_Side_TLS}
+  url = {https://wiki.mozilla.org/Security/Server_Side_TLS},
+  urldate = {2018-03-06}
 }
-@misc{wiki-gplay-popular,
-  author = "Wikipedia contributors",
-  title = "List of most downloaded Google Play applications --- Wikipedia{,} The Free Encyclopedia",
-  year = "2018",
-  url = "\url{https://en.wikipedia.org/w/index.php?title=List_of_most_downloaded_Google_Play_applications&oldid=828439408}",
-  note = "[Online; accessed 6-March-2018]"
+@online{wiki-gplay-popular,
+  title = {List of most downloaded Google Play applications --- Wikipedia, The Free Encyclopedia},
+  author = {Wikipedia contributors},
+  year = {2018},
+  url = {https://en.wikipedia.org/w/index.php?title=List_of_most_downloaded_Google_Play_applications&oldid=828439408},
+  urldate = {2018-03-06}
 }
-
+@online{imo,
+  title  = {imo.im website},
+  author = {imo.im},
+  year   = {2018},
+  url    = {https://imo.im},
+  urldate = {2018-03-08}
+}
