--- a/report/report.tex
+++ b/report/report.tex
@@ -109,6 +109,9 @@ imo) and creating a new account (i.e. phone number not previously used for imo),
 as imo uses the same procedure for both. There are no other types of logins
 possible, e.g. there is no option to use a username and password to log in.
 
+Note that multiple devices can use a single number at the same time. The app
+does not show this to the user and crashes regularly in this set-up.
+
 Contacts in imo are added through your Android phone book. You can send those
 contacts text messages, or place (video) calls. You can also share a `story',
 which is a graphical message shared with all your contacts. It can consist of a
@@ -238,8 +241,11 @@ popular applications. Network administrators are unlikely to block those ports.
 
 The downloading of stickers is done over plain HTTP. Anyone observing the
 network traffic can therefore see which emoticons are used by a device. It is
-not visible, however, which chat a sticker was used in.
-%TODO: ^downloaded only once? What about caching?
+not visible, however, which chat a sticker was used in. Stickers are also
+cached, so they will not be downloaded twice, also between for example reboots.
+How long they will be cached exactly, is unknown. In our tests, the client
+never checked for new versions (we expected to see if-modified-since or
+if-none-match http headers).
 
 UDP is used for voice and video calls, using various ports. The choice of UDP
 port seems random for the server, though we have also twice observed the server
@@ -324,6 +330,9 @@ file \texttt{files/brefs.json} contains a field named
 \texttt{LAST\_APP\_OPEN\_TS}, which contains a timestamp of when the app was
 last opened.
 
+We find no trace of messages communicated through the `real time chat' feature,
+neither on the sender's nor the receiver's side.
+
 
 \subsection{Logged-in User Data}
 
@@ -373,13 +382,13 @@ data on a well protected server and wiping it from the mobile device's local
 storage.
 
 Deletions of data are also not properly implemented. Upon deleting a message,
-the entry in the database is deleted but the binary data is still attainable
+the entry in the database is deleted but it is still present in the binary data
 until it is overwritten. This same issue applies when an entire account is
-deleted, data is still available in binary. In addition, at least one database
-table, the call history table, does not have its entries removed at all. We
-would expect an application that deals with private data, such as private chats,
-to re-create, if not securely wipe the entire database upon account deletion to
-prevent data leakage in this way.
+deleted, data is still available in the binary. In addition, at least one
+database table, the call history table, does not have its entries removed at
+all. We would expect an application that deals with private data, such as
+private chats, to re-create, if not securely wipe the entire database upon
+account deletion to prevent data leakage in this way.
 
 However, the lack of data confidentiality is not wholly unexpected, as imo does
 not claim to be a privacy-focused application. Normally, other apps on the
@@ -394,34 +403,61 @@ make it appear as if someone else was logged into the device, or manually insert
 messages into the chat history.
 
 Some data that we deem to be relevant in a forensic investigation could,
-however, not be acquired. We were not able to retrieve unsent (i.e. draft)
-messages from the local storage or network analysis, so imo could be used to
-securely communicate through these drafts. We were also unable to find any
-location data in the locally stored data or through network analysis. It
-therefore remains unclear whether or not imo gathers this data at all, but the
-fact imo requests location permissions suggests that such data may indeed be
-gathered. The video and voice data going through imo also remained unattainable,
-as such data is not stored locally and the network traffic is not sent in
-plaintext.
+however, not be acquired. We were not able to retrieve unsent messages from the
+local storage or network analysis (while they were communicated through the
+`real time chat' feature), so imo could be used to securely communicate through
+these drafts. We were also unable to find any location data in the locally
+stored data or through network analysis. It therefore remains unclear whether
+or not imo gathers this data at all, but the fact imo requests location
+permissions suggests that such data may indeed be gathered. The video and voice
+data going through imo also remained unattainable, as such data is not stored
+locally and the network traffic is sent in an unknown, possibly encrypted
+format.
+
+One should also be aware that, in imo, the same phone number can be used on
+multiple devices concurrently. That an account with a particular phone number
+sent a certain message, reveals little about which device was used.
+
+Finally, the fact that imo attempts to connect between devices directly for
+voice and video calls, might reveal the IP address of the other party. Even if
+the connection is unsuccessful, one can see which IP address it attempts to
+reach. This might reveal which device is used, or where a user is located.
 
 
 \section{Conclusion}\label{sec:conc}
 
+% answer the question
 
 
 \section{Future Work}\label{sec:futwork}
+
+We have left platforms other than Android unexplored. We know the application
+is extremely heavily used on the Android platform and our expectation is that
+other platforms are similar, therefore we focused our efforts on the Android
+application only. Verifying the results on other platforms would be a useful
+addition.
+% TODO perhaps move part of this^ paragraph to the introduction
+
+We were unable to find what protocol the app uses for its communication (only
+stickers were plain http) when it does not use TCP port 80 or 443. We expect
+that the chat communication is encrypted, but the voice and video calls might
+be only compressed or vulnerable to passive intercepts, depending on the
+protocol which is used.
+
+Finally, it might be possible to determine which device sent a certain message.
+Currently, a receipient can only see which phone number sent a message (i.e.
+their contact's), but since one can log into the same account on multiple
+devices concurrently, one cannot discern which device sent a message.
+
 
 \printbibliography
 
 \end{document}
 
 
-% RANDOM NOTES
-% ============
+% TODO
+% ====
 %
-% - One can log in multiple times with the same account from multiple devices, concurrently
-% - TODO: any sort of cache of Real-time-chat? People might chat through that
-%   and thereby never log any messages.
 % - Say something about the reasoning behind choosing to limit the
-%   investigation to the Android version? (prevalence on this platform)
+%   investigation to the Android version? (prevalence on this platform, cheap android devices, probably similar on other platforms anyway, and of course just scoping/focusing our efforts)
 
